fixed the mobile 5s issue w accordion overflow

--- a/_css/_modules.scss
+++ b/_css/_modules.scss
@@ -62,7 +62,7 @@ cite {
 
 .accordion-title {
   background: url("/assets/images/theme/faq-header-bg.jpg") repeat-x;
-  padding: 9px 0 9px 30px;
+  padding: 9px 25px 9px 30px;
   overflow: hidden;
   text-overflow: ellipsis;
   &:before {
